plang/testing/logs/false-incorrect/169/program169.p.p
q sP (TC6a) (Dnw) P1L :- (crF).


eZG7 :- tsr I (OrwPM) qEhV H, vI6H MOf mX0; izcY (e GcZ9 (Aap) m4z W) (R), i (FOnjg) idTLr, pQDP (gF9Q3 (B) KiQS (NY8CV) (Af)) n g (lPH8 QO272 (mf (vIyI (Ccp8)))), u; (l kK gEODa z0sp); jLR vRU5 (u (cH (Mt93) (LwL4) zu) BwQ6 (r (It) K (kq (dqd (khY CDAiW (TQA)) (vB7nF lGiIs)) rzl (a (m2 (iIitt (sMGTI (f3vQ ci) h3 HTS) (G) c (I1Fs))) (qxPOH (cvSvK gmi0) dykRK) (OKi) (NPfN)))) sn8gc) (WA), pNRj AnkG; h9 sk UN (cqO AoX7J (z6H PPl (gpq (KhZ)) KQYNI (JZ)) (Xa17)); iOcK2 (RDXB5) gtbU.


iy (U) :- (((qxsE U (kZ (a (Vg1)) SxTZ) w1A)), qwG (STxS9), (e2eSK (P) (K2) vujho (Vaq5))).


b LSIJ.
qg (oL) LJcM4 (N) K0znH.
yMkrS.


d1Ds (EQ0w).

oCJ (vnIFI (QNU)) Nrs NgM :- plQs rbWK pei1.

vhK kdLEy oDMx (E) (g57 Oh gMEJ (Iz0Df) loM) :- ((gfH (lXSP (tIEj (Xp6) (zl (wtL sjJg BH) (mTiij a6Af Np4C (m (g (aLO5W (Oi923) f3 (A) ZQIU) (pBB) m4v7W) (v CPc)))) w8xvR)) PH), (lRY ZDi o NxVee), vIshu (kp) (Ls7J0), d8r6 ZC (X8TBH) tPhto L, (wJob (L) AF (op bVNGW (yZ4 (Gnr) HlX) x (hG (d07xQ (S) e (U3)))))), ((kJbuK r)).


kkJh0.


em J :- wgI.

npa :- (rYqHl SiVb, r Et (OeYQ); xo oUU, kx (sZfFF (AwPFY) aNZO) Y5G9u (aOk (zYd (d9 dgjn3 (hK uaWUY (U9Gi1) aXho) (V)) j3R) aO59) RkKH; (u R (K)); cJ (zBW (jh7SA (fPNW)) (sE (I3) (nziS (yCIO hT f28 (g N (jQM0R (wpK) (xhz0w) UT9dW (I)) DB6yX)) MiLm (u4l z (A) t8F) (qmyhg (Tzzd))) (FoNX) I0Ke) (uo ff sH91z hd (Uud))) (JX) (j); t7z); dgK2V l t7.
sYzsm ROBU3 OjBuG (h p) :- (((eWro E M6M))).


iQuL FoZC (lb Y6i (n Q)) IaZ8m.

jdg8 :- fiD cn (nLNa2) uu (u (EvqO) w w0 mRjJT), (uU3).
vLm6 CEe HqNao uu :- zEZmc (qTN UDH0 (y4Cep AkXB) s (mz)) Poad1 (zm pXiyh JvRk1), b1m tfgQn, lA (wDwLK) XPcN (vwwjS); g S (L) (EjHn3) L1, hz26a Y8HJN iB RQ3I3; s T; ((mpM)), g u Iu (cLJj (l)) (URIu); pikV ER HHMM7 M82vR (A), s8 (pKRK (ID0)) Aiz, tBuIL EALAr (I), (i (TY) (wLnCm c7 (lxTq (r E5 (dB9wM psP (h5k g (Z) (N))) M (Y)) (ktbd) ckM (m (yvlo ed4) OiA b3J1 (jR7 (H) Am w P)))) (W); qFhH (w1aIr (k (T) Mqe (YU) zO) (Z3J) yd dUfL) OLw; oB80 (V9)).


vIVp MTz :- g (Laz).
? (vJjN (eIpRR (sm9 (a) (NvG) (CK0VW))) (o (OVTkV)) fY (fZ5W KJTsM (K) (a (t) uEmQ (bS LMt NZzh) (Y8m))), jAdo7 (m (PIl)) BB (P0); wN (cQMp lPgI C UL JYU) xkWC5, akVn (VcF60) (vDon (j0jt (un (L) (D3)) (jN S6m (mxoh (t5t8 Sl2E1) (vx (mm1cM (he4N) jwBVw vAKT) (V5f)) (UV9X) (S)) pswP) Y5h (WKMsS))) YrP, (k0DL nSu GiM C KLO), hM E8 (qp mi YEL) (whd Cq6gD Gu (oM (URmIv) (c4 (W) (fCFn) (ZIeD))) (ITqy)), u (iA (CCLH)) (OzHY) fy), ((kG (bNq B VI), xG)), zt (CbHG0) (S7a0) Oc, (o (tA4G (GQ) uV)), whoO (Q) geNJH.